--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -6,6 +6,9 @@
         xmlns:local="clr-namespace:GUI"
         mc:Ignorable="d"
         Title="MainWindow" WindowState="Maximized">
+    <Window.Resources>
+        <local:Vector2Converter x:Key="vec2conv"/>
+    </Window.Resources>
     <Grid Background="#202020">
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
@@ -124,7 +127,7 @@
                                         <TextBox Grid.Column="1" Background="{StaticResource BackgroundLightBrush}"></TextBox>
                                     </Grid>
                                     <Border Margin="2" BorderBrush="{StaticResource BorderBrush}" BorderThickness="1">
-                                        <Grid>
+                                        <Grid DataContext="{Binding ElementName=renderControl, Path=ViewModel.SelectedVisualGeometry.Geometry.Transform}">
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="Auto"/>
                                                 <RowDefinition Height="*"/>
@@ -145,9 +148,9 @@
                                                             <ColumnDefinition Width="1*"/>
                                                         </Grid.ColumnDefinitions>
                                                         <TextBlock Margin="5,0,2,0">X:</TextBlock>
-                                                        <TextBox Grid.Column="1"/>
+                                                        <TextBox Grid.Column="1" Text="{Binding Position, Converter={StaticResource vec2conv}, ConverterParameter=x}"/>
                                                         <TextBlock Margin="5,0,2,0" Grid.Column="2">Y:</TextBlock>
-                                                        <TextBox Grid.Column="3"/>
+                                                        <TextBox Grid.Column="3" Text="{Binding Position, Converter={StaticResource vec2conv}, ConverterParameter=y}"/>
                                                     </Grid>
                                                 </Grid>
                                                 <Grid Margin="0,0,0,3">
@@ -164,9 +167,9 @@
                                                             <ColumnDefinition Width="1*"/>
                                                         </Grid.ColumnDefinitions>
                                                         <TextBlock Margin="5,0,2,0">X:</TextBlock>
-                                                        <TextBox Grid.Column="1"/>
+                                                        <TextBox Grid.Column="1" Text="{Binding LocalScale, Converter={StaticResource vec2conv}, ConverterParameter=x}"/>
                                                         <TextBlock Margin="5,0,2,0" Grid.Column="2">Y:</TextBlock>
-                                                        <TextBox Grid.Column="3"/>
+                                                        <TextBox Grid.Column="3" Text="{Binding LocalScale, Converter={StaticResource vec2conv}, ConverterParameter=y}"/>
                                                     </Grid>
                                                 </Grid>
                                                 <Grid Margin="0,0,0,3">
@@ -175,7 +178,7 @@
                                                         <ColumnDefinition Width="*"/>
                                                     </Grid.ColumnDefinitions>
                                                     <TextBlock Margin="5,0,5,0">Rotation:</TextBlock>
-                                                    <TextBox Grid.Column="1"/>
+                                                    <TextBox Grid.Column="1" Text="{Binding LocalRotationDegrees}"/>
                                                 </Grid>
                                             </StackPanel>
                                         </Grid>
@@ -208,7 +211,7 @@
                                       DataContext="{Binding ElementName=renderControl, Path=ViewModel.CurrentDocumentVisualTree}" ItemsSource="{Binding Roots}">
                                 <TreeView.ItemTemplate>
                                     <HierarchicalDataTemplate DataType="{x:Type local:VisualGeometryTreeNode}" ItemsSource="{Binding Children}">
-                                        <TextBlock Text="{Binding VisualGeometry.Name}"/>
+                                        <TreeViewItem Header="{Binding VisualGeometry.Name}"/>
                                     </HierarchicalDataTemplate>
                                 </TreeView.ItemTemplate>
                             </TreeView>
