--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -129,7 +129,7 @@
                                             <ColumnDefinition Width="*"/>
                                         </Grid.ColumnDefinitions>
                                         <TextBlock Margin="5,0,5,0">Name:</TextBlock>
-                                        <TextBox Grid.Column="1" Background="{StaticResource BackgroundLightBrush}"></TextBox>
+                                        <TextBox Grid.Column="1" Background="{StaticResource BackgroundLightBrush}" Text="{Binding ElementName=renderControl, Path=ViewModel.SelectedVisualGeometry.Name}"></TextBox>
                                     </Grid>
                                     <Border Margin="2" BorderBrush="{StaticResource BorderBrush}" BorderThickness="1">
                                         <Grid DataContext="{Binding ElementName=renderControl, Path=ViewModel.SelectedVisualGeometry.Geometry.Transform}">
