Added current document visual geometry tree

--- a/GUI/DarkTheme.xaml
+++ b/GUI/DarkTheme.xaml
@@ -348,6 +348,7 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Setter Property="IsExpanded" Value="True"/>
     </Style>
     
     
